--- a/style.css
+++ b/style.css
@@ -1,12 +1,34 @@
 @font-face {
-    font-family: Roboto;
-     src: url("assets/fonts/GentiumPlus-BoldItalic.ttf");
+  .font-family: Roboto;
+  src: url(/rsschol-cv/assets/fonts/Roboto/Roboto-LightItalic);   
      
-     @font-face {
+@font-face {
         font-family: Roboto;
          src: url("assets/fonts/Roboto-Black.ttf");
        }
-     .box-sizing 
-       {
-        box-sizing: border-box;
-      }
+  .box-sizing 
+ {
+   box-sizing: border-box;
+   }
+   
+.nav-list {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  html {
+    scroll-behavior: smooth; 
+  }
+  .rightpic {
+    float: right; /* Выравнивание по правому краю */
+    margin: 0 0 5px 5px; /* Отступы вокруг фотографии */
+   }
+   .container {
+    width: 100%;
+    max-width: 1024px; /*максимальная ширина может иметь другое значение*/
+    padding: 0 15px;
+    margin: 0 auto;
+  }
+
+  
+  
