--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .header {
   float:left;
-  margin: right 20px;;
+  margin: right 20px;
   height: 50px;
   padding: 20px 20px 0;
   background: #e1e1e1 ;
