updating the layout

--- a/travel/style.css
+++ b/travel/style.css
@@ -1,22 +1,49 @@
-.header {
-  float:left;
-  margin: right 20px;
-  height: 50px;
-  padding: 20px 20px 0;
-  background: #e1e1e1 ;
-  text-align: center;
+body {
+	color: #8f8f8f;
+	font: 12px Tahoma, sans-serif;
+	background-color: #f8f8f8;
+	border-top: 5px solid #7e7e7e;
+	margin: 0;
+  cursor:pointer;
+}
+input[type="text"] {
+	background-color: #f3f3f3;
+	border: 1px solid #e7e7e7;
+	height: 30px;
+	color: #b2b2b2;
+	padding: 0 10px;
+	vertical-align: top;
+}
+button {
+	color: #fff;
+	background-color: #29c5e6;
+	border: none;
+	height: 32px;
+	font-family: 'Oswald', sans-serif;
+}
+p {
+	margin: 20px 0;
+}
+#wrapper {
+	max-width: 960px;
+	margin: auto;
+  max-width: 1440px;
+}
+header {
   width: 100%;
-  
-  
-  
+	padding: 20px 0;
+  max-width: 960px;
+  margin: auto;
 }
 .menu {
   width: 100%;
+  margin: auto;
   display: table;
-  max-width: 720px;
+  max-width: 1440px;
+  padding: 10px 0;
+	height: 90px;
+
 }
-
-
     .menu ul {
     display: table-row;
     }
@@ -33,38 +60,110 @@
     color: #fff;
     text-align: center;
     }
-  body {
-    background-image: url(/rsschool-cv/assets/fonts/favicon.ico) ;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    nav a {
+      text-decoration: none;
+    }
     
+    nav ul {
+      margin: 0;
+      padding: 0;
     }
-     .container {
-    width: 100%;
-    max-width: 100%; /*максимальная ширина может иметь другое значение*/
-    padding: 0 15px;
-    margin: 0 auto;
-  }
-
-  .container:after, .row:after {
-    content: "";
-    display: table;
-    clear: both;
+    
+    nav li {
+      list-style-position: inside;
+      font: 14px 'Oswald', sans-serif;
+      padding: 10px;
     }
-    .col-1-2 {
-    width: 30%;
-    float: left;
+    
+    .top-menu li {
+      display: inline-block;
+      padding: 10px 30px;
+      margin: 0;
     }
-
-    footer {
-      padding: 10px 20px;
-      background: #9ca2a8;
+    
+    .top-menu li.active {
+      background: #29c5e6;
       color: #fff;
     }
-  
-    .logo {
-  float: right;
-  }
-  
+    
+    .top-menu a {
+      color: #b2b2b2;
+    }
+    #heading {
+      background: transparent url(../images/h1-bg.png);
+      margin: 30px 0;
+      padding-left: 20px;
+    }
+    
+    h1 {
+      display: inline-block;
+      color: #7e7e7e;
+      font: 40px/40px 'Oswald', sans-serif;
+      background: url(../images/bg.png);
+      margin: 0;
+      padding: 0 10px;
+    }
+    main {
+      float: left;
+      width: 250px;
+    }
+    section {
+      margin-left: 280px;
+      padding-bottom: 50px;
+      display: inline-block;
+      scroll-behavior: smooth;
+    }
+    .main-menu li {
+      font-weight: 300;
+      list-style-type: square;
+      border-top: 1px solid #e7e7e7;
+    }
+    
+    .main-menu li:first-child {
+      border: none;
+    }
+    
+    .main-menu li.active {
+      color: #29c5e6;
+    }
+    
+    .main-menu a {
+      color: #8f8f8f;
+    }
+    blockquote {
+      margin: 0;
+      background: #29c5e6;
+      padding: 10px 20px;
+      font-family: 'Oswald', sans-serif;
+      font-weight: 300;
+    }
+    
+    blockquote p {
+      color: #fff;
+      font-style: italic;
+      font-size: 33px;
+      margin: 0;
+    }
+    
+    blockquote cite {
+      display: block;
+      font-size: 20px;
+      font-style: normal;
+      color: #1d8ea6;
+      margin: 0;
+      text-align: right;
+    }
+    footer {
+      background: #7e7e7e;
+      color: #dbdbdb;
+      font-size: 11px;
+    }
+    
+    #footer {
+      max-width: 960px;
+      margin: auto;
+      height: 90px;
+    }
+    html {
+      scroll-behavior: smooth;
+      }
