--- a/travel/style.css
+++ b/travel/style.css
@@ -30,18 +30,20 @@ p {
   max-width: 1440px;
 }
 header {
-  width: 100%;
-	padding: 20px 0;
-  max-width: 960px;
+  width: 1440px;
+	padding: 40px 0;
+  max-width: 1440px;
   margin: auto;
+  color: rgb(230, 220, 220);
 }
 .menu {
-  width: 100%;
+  width: 1440px;
   margin: auto;
   display: table;
   max-width: 1440px;
   padding: 10px 0;
 	height: 90px;
+  
 
 }
     .menu ul {
